Fri Oct 13 13:47:32 BST 2000 Olly Betts

	* backends/quartz/Makefile.am: Commented out quartz_termlist.cc as
	  it's not yet in cvs and is blocking nightly snapshots.

Thu Oct 12 16:55:42 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Convert statssource pointer in LocalSubMatch into an AutoPtr, to
	  fix memory leak bug (exhibited if an exception is thrown in
	  constructor).

Thu Oct 12 16:49:04 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Changed the interface for creating indexer nodes.  
	  Inputs are all fetched at once by request_inputs(), which must
	  be called before any call to get_input_*.  It can be called
	  more than once.

	* The nodes now all use request_inputs()

Thu Oct 12 16:37:42 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* DatabaseBuilder::create() now returns a RefCntPtr, rather than a
	  bare pointer, to prevent accidents involving not referring to
	  a database by refcnt, making a {post,position,term}list, and then
	  accidentally deleting the termlist when that list is deleted (and
	  decrements the refcnt on the database back to 0).

	* Added an assert to refcnt, to ensure that a refcnt pointer isn't
	  made from `this', when this object isn't yet held by a reference
	  counted pointer.

	* Added a termlist to Quartz.  No implementation yet.

	* Removed some old debugging code from Quartz.

Thu Oct 12 14:45:03 BST 2000 Olly Betts

	* Moved common/networkmatch.h into match/

Thu Oct 12 14:28:21 BST 2000 Olly Betts

	* NetClient: Merged set_rset() into set_query().

Thu Oct 12 12:55:53 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Attributes are now readable.  Partially tested.  Bug fixed in
	  temporary table implementation for quartz.

Wed Oct 11 18:55:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added Attributes (ie, Keys) to quartz.  Can write them, and has
	  structure in place for reading them.  Reading not yet written,
	  tests not yet written.
